--- a/Codes/3- Medical_Information_Dataset/Tmp_Python.ipynb
+++ b/Codes/3- Medical_Information_Dataset/Tmp_Python.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0e0cb06d",
+   "metadata": {},
+   "source": [
+    "### Temporary notebook\n",
+    "#### Analysis and Reviewing\n",
+    "#### Dataset info:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "65c11021",
@@ -13,11 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0e0cb06d",
+   "execution_count": 18,
+   "id": "ad2f25c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DATASET = pd.read_excel(\"../../Datasets/3- Medical_Information_Dataset/MID.xlsx\")"
+   ]
   }
  ],
  "metadata": {
